fix footer and alignement of episodes section

--- a/style/partials/_footer.scss
+++ b/style/partials/_footer.scss
@@ -3,8 +3,6 @@ footer {
     top: -50px;
     section.news {
         position: relative;
-        // top: -53px;
-        // @extend %bg-img-lg;
         background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
         clip-path: polygon(0% 10%, 100% 0%, 100% 100%, 0% 100%);
         h3 {
@@ -68,7 +66,6 @@ footer {
     }
 }
 
-
 @media only screen and (min-width: 650px) {
     footer {
         all: unset;
@@ -96,16 +93,20 @@ footer {
                 font-size: 18px;
             }
         }
-        p {
-            margin-bottom: 16px;
-            font-size: 16px;
-        }
-        .sociallogos-container {
-            margin: 24px 46.5px 16px;
-            i {
-                font-size: 18px;
+        div.ctn-networks {
+            display: flex;
+            justify-content: space-between;
+            p {
+                margin-bottom: 16px;
+                font-size: 16px;
             }
-        }
+            .sociallogos-container {
+                margin: 24px 46.5px 16px;
+                i {
+                    font-size: 18px;
+                }
+            }
+        }        
     }
 }
 
